--- a/music.html
+++ b/music.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="./styles.css">
         <title>WeePhix</title>
-        <link rel="icon" type="image/png" href="../images/WP_Logo_circular.png">
+        <link rel="icon" type="image/png" href="./images/WP_Logo_circular.png">
     </head>
     <body>
         <main>
