Fixed grammar and spelling mistakes and added more padding

--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,15 @@
         <article>
             <h2>Contact info</h2>
             <p>
-                You can contact me either through Discord by sending me a friend request, or via email.
-                I prefer getting in touch on Discord, but it is possible that i won't notice your friend request or will ignore it,
-                but I do check Discord signifficantly more often than my email.<br>
-                If you are contancting me via email, please leave the <span class="codeblock">+site</span> suffix before @ in the address,
+                You can contact me through Discord by sending me a friend request or via email.
+                I prefer getting in touch on Discord, but there is a chance that I may not notice or ignore your friend request,
+                although I do check Discord significantly more frequently than my email.<br>
+                If you are reaching out via email, please leave the <span class="codeblock">+site</span> suffix before @ in the address,
                 so that your email doesn't get flagged as spam.<br>
-                Also, if you sent me a friend request on Discord and i haven't accepted it in two days, please send me an email,
+                Also, if you sent me a friend request on Discord and I haven't accepted it after two days, please send me an email,
                 since that was probably unintentional.<br>
-                Aditionally, if you are interested in game development, i suggest you join my friend <a href="https://linkio.dev/">Linkio</a>'s
-                discord server <a href="https://discord.gg/DVpYmwRE9r">Imaginarium</a>.
+                Aditionally, if you are interested in game development, I suggest you join my friend <a href="https://linkio.dev/">Linkio</a>'s
+                discord server <a href="https://discord.gg/DVpYmwRE9r">Imaginarium</a>. I am also a member, so you can contact me there too.
             </p>
             <ul class="contact-list">
                 <li>Email: <span class="datapoint">weephix<span>+site<span>@gmail.com</span></li>
