--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
             </a>
         </main>
         <article>
+            <div class="wp-banner"><img src="./images/WP_Logo_banner.png" title="WeePhix banner"></div>
             <h2>About me</h2>
             <p>
                 My name is Evan, but I'm mostly known on the internet by the username WeePhix.
-                I am a maths student, hobbyist programmer, enjoyer of atypical music and of videogames.
-                I also like to think that I am a game developer.
-                Here you will find some info about me that I deem interesting and worth sharing.
+                I am a maths student, hobbyist programmer and enjoy videogames and (atypical) music.
+                I also like to myself as a game developer a game developer.
+                Here you will find some information about me that I think is interesting and worth sharing.
                 <div class="thanks">Thanks for reading and enjoy your stay!</div>
             </p>
             <h2>Topics</h2>
