--- a/music.html
+++ b/music.html
@@ -17,9 +17,9 @@
         <article>
             <h2>Music</h2>
             <p>
-                Sadly, I don't make music myself, but I do have some recommendations for anyone willing to check out new songs
-                If you have a playlist, album, song or artist that you think I'd enjoy, please send it my way on Discord or email,
-                listed on the <a href="./contact.html">Contact</a> page.<br>
+                Unfortunately, I don't create music myself, but I do have some recommendations for anyone interested in discovering new songs
+                If you have a playlist, album, song or artist that you believe I would enjoy, i would appreciate you sharing it with me through Discord or email,
+                which are listed on the <a href="./contact.html">Contact</a> page.<br>
                 Anyways, here are my music recommendations:
             </p>
             <div>
@@ -34,7 +34,7 @@
                         <td class="artist">Hozier</td>
                         <td><a href="https://www.youtube.com/@hozier">youtube.com/@hozier</a></td>
                         <td><a href="https://open.spotify.com/artist/2FXC3k01G6Gw61bmprjgqS?si=2e95ef9f31f843e4">open.spotify.com/artist/2FXC3k01G6Gw61bmprjgqS?si=2e95ef9f31f843e4</a></td>
-                        <td>Literally all his songs are amazing. Currently I especially enjoy his latest album <a href="https://open.spotify.com/album/48qd9sU3xqYJbKaxHCciJL?si=iYUdq0zzRsqOL_SodbzTLg">Unreal: Unaired</a>,
+                        <td>All of his songs are amazing. Currently I am particualrly enjoying his latest album <a href="https://open.spotify.com/album/48qd9sU3xqYJbKaxHCciJL?si=iYUdq0zzRsqOL_SodbzTLg">Unreal: Unaired</a>,
                             his oldest album <a href="https://open.spotify.com/album/0Uv83rRhY5QvHKkQoULRKk?si=d7kO-zeiS7izA-rf3sfMtQ">Hozier</a>
                             and the songs <a href="https://open.spotify.com/track/2zGlEuv6cHIp7MJbh4xWXd?si=d10a207cf3f34174">Talk</a> and <a href="https://open.spotify.com/track/0QvayHa5T6IBfET8TrTbcA?si=6471364ed7974c0e">Movement</a></td>
                     </tr>
@@ -73,7 +73,7 @@
                         <td class="artist">Hans Zimmer</td>
                         <td><a href="https://www.youtube.com/channel/UCJeBQabyLa_FvMxb6G67lkw">youtube.com/channel/UCJeBQabyLa_FvMxb6G67lkw</a></td>
                         <td><a href="https://open.spotify.com/artist/0YC192cP3KPCRWx8zr8MfZ?si=d48517ff9f654de5">open.spotify.com/artist/0YC192cP3KPCRWx8zr8MfZ?si=d48517ff9f654de5</a></td>
-                        <td>Composer, mainly for movies, such as Dune, Dune: Part two, Top Gun: Maverick, Interstellar, Inception and Pirates of the Carribean</td>
+                        <td>Composer, mainly for movies such as Dune, Dune: Part two, Top Gun: Maverick, Interstellar, Inception and Pirates of the Caribbean</td>
                     </tr>
                     <tr>
                         <td class="artist">Lena Raine</td>
@@ -91,13 +91,13 @@
                         <td class="artist">Darren Korb</td>
                         <td><a href="https://www.youtube.com/channel/UCxcelUjL7OrIaR6_UnZv9TQ">youtube.com/channel/UCxcelUjL7OrIaR6_UnZv9TQ</a></td>
                         <td><a href="https://open.spotify.com/artist/0ZMWrgLff357yxLyEU77a1?si=f65a6cce6e7e437c">open.spotify.com/artist/0ZMWrgLff357yxLyEU77a1?si=f65a6cce6e7e437c</a></td>
-                        <td>Composer of Supergiant Games. My (current) favourite of his is the <a href="https://open.spotify.com/playlist/3lGuQn2a9BGDxT1BeduGmk?si=21c82fec14e5482b">Hades II album</a></td>
+                        <td>Composer for Supergiant Games. My (current) favourite of his is the <a href="https://open.spotify.com/playlist/3lGuQn2a9BGDxT1BeduGmk?si=21c82fec14e5482b">Hades II album</a></td>
                     </tr>
                     <tr>
                         <td class="artist">River Boy</td>
                         <td><a href="https://www.youtube.com/@RiverBoyBeats">youtube.com/@RiverBoyBeats</a></td>
                         <td><a href="https://open.spotify.com/artist/0jyJkJaH4nFWPopjeIYRlA?si=xoeU9u_iQkO9RcUdJRuUEg">open.spotify.com/artist/0jyJkJaH4nFWPopjeIYRlA?si=xoeU9u_iQkO9RcUdJRuUEg</a></td>
-                        <td>Composer for the Cult of the Lamb OSTs and other projects</td>
+                        <td>Composer of the Cult of the Lamb OSTs and other projects</td>
                     </tr>
                     <tr>
                         <td class="artist">Kubbi</td>
@@ -127,7 +127,7 @@
                     </tr>
                 </table>
             </div>
-            <p>More to be added when I encounter good music ;P</p>
+            <p>I'll add more as I discover good music ;P</p>
         <h2>Topics</h2>
             <ul class="nav-bar">
                 <li>
