--- a/music.html
+++ b/music.html
@@ -145,7 +145,7 @@
             </ul>
         </article>
         <footer>
-            <a href="./index.html"></a>
+            <a href="https://weephix.github.io/" class="center"><p style="text-align: center;">weephix.github.io</a>
         </footer>
     </body>
 </html>
