Fixed an error in copy-pasting -_-

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>
                 My name is Evan, but I'm mostly known on the internet by the username WeePhix.
                 I am a maths student, hobbyist programmer and enjoy videogames and (atypical) music.
-                I also like to myself as a game developer a game developer.
+                I also like to consider myself as a game developer.
                 Here you will find some information about me that I think is interesting and worth sharing.
                 <div class="thanks">Thanks for reading and enjoy your stay!</div>
             </p>
